<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddProperty" >
    
	<EditText
        android:id="@+id/addzipcode"
        android:hint="@string/zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addaddress"
        android:hint="@string/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <EditText
        android:id="@+id/addfloor"
        android:hint="@string/floor_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/adddoor"
        android:hint="@string/door_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/addoffertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/offer_type" />

    <Spinner
        android:id="@+id/addpropertytype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/add_proptype"/>

    <EditText
        android:id="@+id/addprice"
        android:hint="@string/price_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/addarea"
        android:hint="@string/area_m2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <Button
            android:id="@+id/addpropertyprev1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_gravity="left"
            android:text="@string/previous" />

        <Button
            android:id="@+id/addpropertynext1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="@string/next" />

    </GridLayout>

</LinearLayout>
