<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Choices" 
    android:background="@color/lightblue">

    <Button
        android:id="@+id/btnlistall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_all" />

    <Button
        android:id="@+id/btnsearchforproperty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/btnaddnewproperty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_property" />

    <Button
        android:id="@+id/btnexitpropertymanager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/exit" />

</GridLayout>
